# TicTacToe

./: README.md  install.sh
client/: CMakeLists.txt  client.cpp  client.h  drawing_device.cpp  drawing_device.h  main.cpp  tools.h
server/: CMakeLists.txt  main.cpp  session.cpp  session.h  tcp_server.cpp  tcp_server.h  tools.h
